changed some code

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1741,7 +1741,7 @@ p {
     content: '';
     width: 18px;
     height: 2px;
-    background: #dfdfdf;
+    background: #dc3c4b;
     display: block;
     margin-top: 15px; }
 
