--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -8,48 +8,162 @@
 {% block css %}{% endblock %}
 {% block headerimage %}
 
-     <div class="banner banner-template"><div class="container"><div class="title-header"><h1>About Us</h1><h6 class="header-sub-title">Why Choose Digitech Partner ?</h6></div></div><div class="scroll-to mouse"><span></span></div><div class="clip"><div class="bg bg-bg" style="background-image:url(img/custom-bg-8.jpg)"></div></div><div class="overlay"></div></div>
+     <div class="banner banner-template"><div class="container"><div class="title-header"><h1>About Us</h1>
+         <h6 class="header-sub-title">Why Choose Digitech Partner ?</h6></div></div><div class="scroll-to mouse"><span></span></div>
+         <div class="clip"><div class="bg bg-bg" style="background-image:url(/static/img/custom-bg-10.jpg)"></div></div><div class="overlay"></div></div>
 
 {% endblock %}
 {% block content %}
 <main class="main-shotcodes start-block">
 
-            <section class="section">
+            <section class="section section-border">
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-10">
-                            <div class="tab-wrapper clearfix tab-style-3">
-                                <div class="nav-tab clearfix">
-                                    <div class="nav-tab-item active">Who we are ?</div>
-                                    <div class="nav-tab-item">How we work ?  </div>
-                                    <div class="nav-tab-item">Technologies</div>
-                                </div>
-                                <div class="tabs-content">
-                                    <div class="tab-info active">
-                                        <h3>we are make creative things</h3>
-                                        Omnis iste natus doxes sit voluptatem accusantium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo. Nemo enim ipsam voluptatemquia voluptas sit aspernatur aut odit aut fugit, sed quia consequunturmagni dolores eos qui ratione voluptatem.</div>
-                                    <div class="tab-info">
-                                        <h3>we are make creative things</h3>
-                                        Omnis iste natus doxes sit voluptatem accusantium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo. Nemo enim ipsam voluptatemquia voluptas sit aspernatur aut odit aut fugit, sed quia consequunturmagni dolores eos qui ratione voluptatem.</div>
-                                    <div class="tab-info">
-                                        <h3>we are make creative things</h3>
-                                        Omnis iste natus doxes sit voluptatem accusantium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo. Nemo enim ipsam voluptatemquia voluptas sit aspernatur aut odit aut fugit, sed quia consequunturmagni dolores eos qui ratione voluptatem.</div>
-                                </div>
+
+                        <div class="title-block col-sm-12 ">
+                            <h2 class="h1">Welcome to Digitech Partner</h2>
+                            <div class="sub-title-type-2">
+                                <blockquote class="blockquote blockquote-type-1">Digitech Partner is emerging company in IT sector. Established in 2015 with extremely qualified and well experienced professionals who let your IT related queries solve with their intellectual, out of the box and mind blowing ideas.
+                        We ensures that the functioning of your systems is optimized with end user support and data center management. Our services includes cutting edge solutions to install and integrate hardware and software to manage complex IT implementation projects successfully.
+
+                                </blockquote>
                             </div>
                         </div>
-                        <div class="col-sm-2" style="">
-                          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- sideadd -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-4139762682405495"
-     data-ad-slot="6863441168"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
+                             </div>
+                    <div class='row'>
+                        <div class="accordion-container">
+
+                            <div class="title-block col-sm-6 ">
+                            <h4 class="h4">Why Us ?</h4>
+                            <div class="sub-title-type-2">
+                                <div class="accordion-item accordion-style-2">
+                                    <div class="accordion-title">
+                                        perspiciatis unde omnis iste natus
+                                    </div>
+                                    <div class="accordion-content">
+                                        Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo. Nemo enim ipsam voluptatem.
+                                        quia voluptas sit aspernatur aut odit.
+                                    </div>
+                                </div>
+                                <div class="accordion-item accordion-style-2">
+                                    <div class="accordion-title">
+                                        ptatem accusantium doloremque
+                                    </div>
+                                    <div class="accordion-content">
+                                        Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo. Nemo enim ipsam voluptatem.
+                                        quia voluptas sit aspernatur aut odit.
+                                    </div>
+                                </div>
+                                <div class="accordion-item accordion-style-2">
+                                    <div class="accordion-title">
+                                        totam rem aperiam, eaque ipsa
+                                    </div>
+                                    <div class="accordion-content">
+                                        Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo. Nemo enim ipsam voluptatem.
+                                        quia voluptas sit aspernatur aut odit.
+                                    </div>
+                                </div>
+                                <div class="accordion-item accordion-style-2">
+                                    <div class="accordion-title">
+                                        quasi architecto beatae vitae dicta
+                                    </div>
+                                    <div class="accordion-content">
+                                        Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo. Nemo enim ipsam voluptatem.
+                                        quia voluptas sit aspernatur aut odit.
+                                    </div>
+                                </div>
+                            </div>
+                                </div>
+
+
+                                <div class="title-block col-sm-6 ">
+                            <h4 class="h4">What We Do ?</h4>
+                            <div class="sub-title-type-2">
+                                <ul class="list list-type-4">
+
+                                <li><i class="fa fa-map-signs"></i>Natus doxes sit voluptatem accu</li>
+                                 <li><i class="fa fa-map-signs"></i>Natus doxes sit voluptatem accu</li>
+                                 <li><i class="fa fa-map-signs"></i>Natus doxes sit voluptatem accu</li>
+                                 <li><i class="fa fa-map-signs"></i>Natus doxes sit voluptatem accu</li> <li>
+                                <i class="fa fa-map-signs"></i>Natus doxes sit voluptatem accu</li>
+                                 <li><i class="fa fa-map-signs"></i>Natus doxes sit voluptatem accu</li>
+
+                            </ul></div>
+                        </div>
+
+
                             </div>
 
+
+                        </div>
+                    </div>
+                    </div>
+
+
+            </section>
+<div class="section section-border section-gray">
+                <div class="container">
+                    <div class="swiper-container testi-slider xs-padd" data-autoplay="0" data-loop="0" data-speed="500" data-center="0" data-slides-per-view="1">
+                        <div class="swiper-wrapper ">
+                            <div class="swiper-slide text-center">
+                                <img class="author-ava" src="/static/img/ava.png" alt="">
+                                <blockquote class="testimonials ">
+                                    "Qerspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque laudantium, totam aperiam
+                                    eaque ipsa quae ab illo inventore veritatis et quasi architecto"
+                                </blockquote>
+                                <cite class="author">Albert Dowson.  Company director</cite>
+                            </div>
+                            <div class="swiper-slide text-center">
+                                <img class="author-ava" src="/static/img/ava.png" alt="">
+                                <blockquote class="testimonials ">
+                                    "Qerspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque laudantium, totam aperiam
+                                    eaque ipsa quae ab illo inventore veritatis et quasi architecto Qerspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque laudantium, totam aperiam
+                                    eaque ipsa quae ab illo inventore veritatis et quasi architecto"
+                                </blockquote>
+                                <cite class="author">Albert Dowson.  Company director</cite>
+                            </div>
+                            <div class="swiper-slide text-center">
+                                <img class="author-ava" src="/static/img/ava.png" alt="">
+                                <blockquote class="testimonials ">
+                                    "Qerspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque laudantium, totam aperiam
+                                    eaque ipsa quae ab illo inventore veritatis et quasi architecto Qerspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque laudantium, totam aperiam
+                                    eaque ipsa quae ab illo inventore veritatis et quasi architecto Qerspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque laudantium, totam aperiam
+                                    eaque ipsa quae ab illo inventore veritatis et quasi architect"
+                                </blockquote>
+                                <cite class="author">Albert Dowson.  Company director</cite>
+                            </div>
+                        </div>
+                        <div class="pagination"></div>
+                    </div>
+                </div>
+            </div>
+<section class="section section-border">
+                <div class="container">
+                    <div class="title-block">
+                        <h2 class="title">our clients</h2>
+
+                    </div>
+                    <div class="swiper-container client-slider swiper-swiper-unique-id-0 initialized" data-autoplay="0" data-loop="1" data-speed="500" data-center="0" data-slides-per-view="responsive" data-xs-slides="2" data-sm-slides="3" data-md-slides="4" data-lg-slides="5" data-add-slides="6" id="swiper-unique-id-0">
+
+                        <div class="swiper-wrapper " style="width: 3876px; transform: translate3d(-1140px, 0px, 0px); transition-duration: 0s; height: 103px;"><div class="swiper-slide swiper-slide-duplicate" style="width: 228px; height: 103px;">
+                                <a href="#"><img src="/static/img/client-3.png" alt=""></a>
+                            </div>
+                            <div class="swiper-slide swiper-slide-duplicate" style="width: 228px; height: 103px;">
+                                <a href="#"><img src="/static/img/client-4.png" alt=""></a>
+                            </div>
+                            <div class="swiper-slide swiper-slide-duplicate" style="width: 228px; height: 103px;">
+                                <a href="#"><img src="/static/img/client-5.png" alt=""></a>
+                            </div>
+                            <div class="swiper-slide swiper-slide-duplicate" style="width: 228px; height: 103px;">
+                                <a href="#"><img src="/static/img/client-6.png" alt=""></a>
+                            </div>
+                            <div class="swiper-slide swiper-slide-duplicate" style="width: 228px; height: 103px;">
+                                <a href="#"><img src="/static/img/client-1.png" alt=""></a>
+                            </div>
+
+                            </div>
+                        <div class="pagination pagination-hide pagination-swiper-unique-id-2 pagination-swiper-unique-id-0"><span class="swiper-pagination-switch swiper-visible-switch swiper-active-switch" style="display: inline-block;"></span><span class="swiper-pagination-switch swiper-visible-switch" style="display: inline-block;"></span><span class="swiper-pagination-switch swiper-visible-switch" style="display: inline-block;"></span><span class="swiper-pagination-switch swiper-visible-switch" style="display: none;"></span><span class="swiper-pagination-switch swiper-visible-switch" style="display: none;"></span><span class="swiper-pagination-switch" style="display: none;"></span><span class="swiper-pagination-switch" style="display: none;"></span></div>
                     </div>
                 </div>
             </section>
