--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -6,9 +6,18 @@
 <meta name="keywords" content="Open Source web development,Open Source,Professional,Professional Development,Web Design Gurgaon,Web Application,Dynamic Website,Static Website,Responsive Design,Responsive Website,Website,Website Development,Designing,Web Designing,Website Designing,Domain,Photography,Retouching,Domain Registration,CMS,ERP,Content,Content Writing,E Commerce,Print,Media,Print Media,Development,Digitech,Partner,Digitech Partner,Software,Software Development,Search,Search Engine,Search Engine Optimization,Social Marketing,Social,Social Media,SEO,SMO,Web,Support,Maintanance,Programming,Coding,Hosting,Outsourcing,Google Adsence,Gurgaon,Delhi,Company,Payment,Payment Gateway,Payment Gateway Integration,E-Commerce Website,E-commerce,E Commerce Solutions,solutions,Online Payment Integration,Shopping Cart,Gateway Integration" />
 
 {% endblock %}
-{% block css %}{% endblock %}
+{% block css %}
+    <style>
+    .row{
+        margin-bottom: 30px;
+
+    }
+    </style>
+{% endblock %}
 {% block headerimage %}
-<div class="banner banner-template"><div class="container"><div class="title-header"><h1>Contact Us</h1><h6 class="header-sub-title">Why Choose Digitech Partner ?</h6></div></div><div class="scroll-to mouse"><span></span></div><div class="clip"><div class="bg bg-bg" style="background-image:url(img/custom-bg-8.jpg)"></div></div><div class="overlay"></div></div>
+<div class="banner banner-template"><div class="container"><div class="title-header"><h1>Contact Us</h1>
+    <h6 class="header-sub-title">Why Choose Digitech Partner ?</h6></div></div><div class="scroll-to mouse"><span></span></div><div class="clip">
+    <div class="bg bg-bg" style="background-image:url(/static/img/custom-bg-10.jpg)"></div></div><div class="overlay"></div></div>
 {% endblock %}
 {% block content %}
 <main class="main-shotcodes start-block">
@@ -20,9 +29,12 @@
                         <div class="title-block col-sm-12 ">
                             <h2 class="h1">Want to Contact Us ?</h2>
                             <div class="sub-title-type-2">
-                                <blockquote class="blockquote blockquote-type-1">Qoluptatem accusantium doloremque laudantium
-                                    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-                                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+                                 <blockquote class="blockquote blockquote-type-3"><span>
+                                Digitech Partner is emerging company in IT sector. Established in 2015 with extremely qualified and well experienced professionals who let your IT related queries solve with their intellectual, out of the box and mind blowing ideas.
+                        We ensures that the functioning of your systems is optimized with end user support and data center management. Our services includes cutting edge solutions to install and integrate hardware and software to manage complex IT implementation projects successfully.
+
+                            </span>
+
                                 </blockquote>
                             </div>
                         </div>
@@ -37,16 +49,18 @@
                         <div class="title-block title-travel">
                             <h2 class="title">OUR company</h2>
                             <div class="sub-title">
-                                Natus doxes sit voluptatemaccusantium doloremque.
+                                If a customer's queries require more individual assistance they can either e-mail or telephone our support staff.
                             </div>
                         </div>
-                        <p>Quae ab illo veritatis et quasi architecto beatae vitae dicta. Sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.</p>
+                        <p>Thanks to all our clients for giving us an opportunity to create cutting edge design and development solutions for their businesses.
+Our aim is to provide premium quality solutions within the preferred budget and time frame to best benefit our client's business.
+Please feel free to browse through our Portfolio section to see what we have done for our clients.</p>
                        <ul class="ftr-list">
 
-                            <li><i class="fa fa-phone"></i><span>Telephone:</span> <a href="tel:919899636669"> +91*9899636669</a></li>
-                            <li><i class="fa fa-envelope-o"></i><span>E-mail:</span> <a href="support@digitechpartner.com">support@infotechmediasolutions.com</a></li>
+                            <li><i class="fa fa-phone"></i><span>Telephone:</span> <a href="tel:919899636669"> +91-9899636669</a></li>
+                            <li><i class="fa fa-envelope-o"></i><span>E-mail:</span> <a href="support@digitechpartner.com">support@digitechpartner.com</a>;<a href="info@digitechpartner.com">info@digitechpartner.com</a></li>
                             <li><i class="fa fa-skype"></i><span>Skype:</span> <a href="tel:bkotwani"> bkotwani</a></li>
-                            <li><i class="fa fa-facebook-official"></i><span>Facebook:</span> <a href="#"> bharat.kotwani1@facebook.com</a></li>
+                            <li><i class="fa fa-facebook-official"></i><span>Facebook:</span> <a href="https://www.facebook.com/bharat.kotwani1">https://www.facebook.com/bharat.kotwani1</a></li>
                         </ul>
                         <div class="ftr-social">
                             <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
@@ -60,7 +74,8 @@
                         <div class="title-block title-travel">
                             <h2 class="title">Contact Form</h2>
                             <div class="sub-title">
-                                Perspiciatis unde omnis iste natus doxes sit voluptatem.
+                                Your feedback can help improve our product and service.
+Feel free to give us suggestions.
                             </div>
                             <form class="contact-us"  action="http://demo.freshface.net/html/h-sonic/">
                                 <input type="text" placeholder="Full  Name"   required/>
