--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,10 @@
     .middle-title:after {
           background: #dc3c4b;
     }
+    .fa-lightbulb-o,.fa-camera,.fa-angellist,.fa-coffee
+    {
+        font-size:60px !important;
+    }
 
 
     </style>
@@ -32,8 +36,8 @@
                             <div class="slider-sub-title">Website designing and development<br>
                                 We operate under two guiding principles: the delivery of cutting edge solutions; and always putting the customer first.</div>
                             <div class="button-row">
-                                <a class="button-type-4" href="#">MOre about us</a>
-                                <a class="button-type-5" href="#">check our services</a>
+                                <a class="button-type-4" href="/about-us">More about us</a>
+                                <a class="button-type-5" href="/services">check our services</a>
                             </div>
                         </div>
                     </div>
@@ -45,8 +49,8 @@
                             <div class="slider-sub-title">Leverging emerging technologies <br>
                              in a disruptive technology environment .</div>
                             <div class="button-row">
-                                <a class="button-type-4" href="#">MOre about us</a>
-                                <a class="button-type-5" href="#">check our services</a>
+                                <a class="button-type-4" href="/about-us">More about us</a>
+                                <a class="button-type-5" href="/services">check our services</a>
                             </div>
                         </div>
                     </div>
@@ -58,8 +62,8 @@
                             <div class="slider-sub-title">24x7 Support & Maintenance,<br>
                                 We offer full support and maintenance services to our clients. problem and find the proper solution.</div>
                             <div class="button-row">
-                                <a class="button-type-4" href="#">MOre about us</a>
-                                <a class="button-type-5" href="#">check our services</a>
+                                <a class="button-type-4" href="/about-us">More about us</a>
+                                <a class="button-type-5" href="/services">check our services</a>
                             </div>
                         </div>
                     </div>
@@ -293,7 +297,7 @@
                 <div class="row time-line time-line-light time-line-light-no-bg">
                     <div class="col-sm-3">
                         <div class="count-box">
-                            <span class="icon-lightbulb"></span>
+                            <span class="fa fa-lightbulb-o"></span>
                             <div class="count-amount" data-to="4560" data-speed="3000">4560</div>
                             <div class="count-name">
                                 hours of work
@@ -302,8 +306,8 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="count-box">
-                            <span class="icon-camera"></span>
-                            <div class="count-amount" data-to="155" data-speed="3000">155</div>
+                            <span class="fa fa-camera"></span>
+                            <div class="count-amount" data-to="5" data-speed="3000">5</div>
                             <div class="count-name">
                                 projects completed
                             </div>
@@ -311,8 +315,8 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="count-box">
-                            <span class="icon-anchor"></span>
-                            <div class="count-amount" data-to="100" data-speed="3000">100</div>
+                            <span class="fa fa-angellist"></span>
+                            <div class="count-amount" data-to="100" data-speed="3000">10</div>
                             <div class="count-name">
                                 client satisfaction
                             </div>
@@ -320,10 +324,10 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="count-box">
-                            <span class="icon-puzzle"></span>
+                            <span class="fa fa-coffee"></span>
                             <div class="count-amount" data-to="452" data-speed="3000">452</div>
                             <div class="count-name">
-                                puzzles complete:)
+                                cups of cofee :)
                             </div>
                         </div>
                     </div>
@@ -333,42 +337,6 @@
                 <div class="bg bg-bg" style="background-image:url(/static/img/custom-bg-3.jpg)"></div>
             </div>
             <div class="overlay"></div>
-        </div>
-        <div class="section">
-            <div class="container">
-                <div class="title-block">
-                    <h2 class="title">Our clients</h2>
-                    <div class="sub-title">
-                        We are a creative agency with a passion for design & developing beautiful creations.
-                    </div>
-                </div>
-                <div class="swiper-container client-slider" data-autoplay="0" data-loop="1" data-speed="500" data-center="0" data-slides-per-view="responsive" data-xs-slides="2" data-sm-slides="3" data-md-slides="4" data-lg-slides="5" data-add-slides="6" >
-                    <div class="swiper-wrapper ">
-                        <div class="swiper-slide" >
-                            <a href="#"><img src="/static/img/client-1.png" alt=""></a>
-                        </div>
-                        <div class="swiper-slide" >
-                            <a href="#"><img src="/static/img/client-2.png" alt=""></a>
-                        </div>
-                        <div class="swiper-slide" >
-                            <a href="#"><img src="/static/img/client-3.png" alt=""></a>
-                        </div>
-                        <div class="swiper-slide" >
-                            <a href="#"><img src="/static/img/client-4.png" alt=""></a>
-                        </div>
-                        <div class="swiper-slide" >
-                            <a href="#"><img src="/static/img/client-5.png" alt=""></a>
-                        </div>
-                        <div class="swiper-slide" >
-                            <a href="#"><img src="/static/img/client-6.png" alt=""></a>
-                        </div>
-                        <div class="swiper-slide">
-                            <a href="#"><img src="/static/img/client-1.png" alt=""></a>
-                        </div>
-                    </div>
-                    <div class="pagination pagination-hide "></div>
-                </div>
-			</div>
         </div>
 
 {% endblock %}
