--- a/templates/services.html
+++ b/templates/services.html
@@ -16,83 +16,184 @@
     </style>
 {% endblock %}
 {% block headerimage %}
-<div class="banner banner-template"><div class="container"><div class="title-header"><h1>Our Services</h1><h6 class="header-sub-title">Why Choose Digitech Partner ?</h6></div></div><div class="scroll-to mouse"><span></span></div><div class="clip"><div class="bg bg-bg" style="background-image:url(img/custom-bg-8.jpg)"></div></div><div class="overlay"></div></div>
+<div class="banner banner-template"><div class="container"><div class="title-header"><h1>Our Services</h1><h6 class="header-sub-title">
+    Why Choose Digitech Partner ?</h6></div></div><div class="scroll-to mouse"><span></span></div><div class="clip">
+    <div class="bg bg-bg" style="background-image:url(/static/img/custom-bg-10.jpg)"></div></div><div class="overlay"></div></div>
 {% endblock %}
 {% block content %}
     <main class="main-shotcodes start-block">
-        <section class="section section-border">
+      <section class="section section-border">
                 <div class="container">
-                    <div class="title-block">
-                        <h2 class="title">Our Services</h2>
-                        <div class="sub-title">
-                            We are a creative agency with a passion for design & developing beautiful creations.
-                            We’ve had the privilege to work with some of the largest names
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-4 icon-style icon-style-1">
-                            <span class="icon-tools"></span>
-                            <h3 class="middle-title middle-title_center">Web Designing</h3>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                                quae ab illo.</p>
-                        </div>
-                        <div class="col-sm-4 icon-style icon-style-1">
-                            <span class="icon-gears"></span>
-                            <h3 class="middle-title middle-title_center">Web Development</h3>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                                quae ab illo.</p>
-                        </div>
-                        <div class="col-sm-4 icon-style icon-style-1">
-                            <span class="icon-pencil"></span>
-                            <h3 class="middle-title middle-title_center">E-Commerce</h3>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                                quae ab illo.</p>
-                        </div>
-                    </div>
 
                     <div class="row">
-                        <div class="col-sm-4 icon-style icon-style-1">
-                            <span class="icon-tools"></span>
-                            <h3 class="middle-title middle-title_center">Print Media</h3>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                                quae ab illo.</p>
+                        <div class="col-sm-12 col-md-4">
+                            <div class="special-banner">
+                                <img src="/static/img/s-banner-1.jpg" alt="">
+                                <div class="s-banner-box">
+                                    <div class="s-banner-info">
+                                        <span class="icon-tools"></span>
+                                        <h3>Web Designing</h3>
+                                        <div class="s-banner-text">
+                                            Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantium
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="s-banner-more">
+                                    <div class="s-banner-more-center">
+                                        <a href="#"> <i class="fa fa-bars"></i></a>
+                                        <p>Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
+                                        <a class="button button-type-2-md btn-white" href="#">more</a><br>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-sm-4 icon-style icon-style-1">
-                            <span class="icon-gears"></span>
-                            <h3 class="middle-title middle-title_center">Seo Services</h3>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                                quae ab illo.</p>
+                        <div class="col-sm-12 col-md-4">
+                            <div class="special-banner">
+                                <img src="/static/img/s-banner-2.jpg" alt="">
+                                <div class="s-banner-box">
+                                    <div class="s-banner-info">
+                                        <span class="icon-gears"></span>
+                                        <h3>Web Development</h3>
+                                        <div class="s-banner-text">
+                                            Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantium
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="s-banner-more">
+                                    <div class="s-banner-more-center">
+                                        <a href="#"> <i class="fa fa-bars"></i></a>
+                                        <p>Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
+                                        <a class="button button-type-2-md btn-white" href="#">more</a><br>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-sm-4 icon-style icon-style-1">
-                            <span class="icon-pencil"></span>
-                            <h3 class="middle-title middle-title_center">Support & Maintenance</h3>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                                quae ab illo.</p>
+                        <div class="col-sm-12 col-md-4">
+                            <div class="special-banner">
+                                <img src="/static/img/s-banner-3.jpg" alt="">
+                                <div class="s-banner-box">
+                                    <div class="s-banner-info">
+                                        <span class="icon-telescope"></span>
+                                        <h3>E Commerce</h3>
+                                        <div class="s-banner-text">
+                                            Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantium
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="s-banner-more">
+                                    <div class="s-banner-more-center">
+                                        <a href="#"> <i class="fa fa-bars"></i></a>
+                                        <p>Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
+                                        <a class="button button-type-2-md btn-white" href="#">more</a><br>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-<div class="row">
-                        <div class="col-sm-4 icon-style icon-style-1">
-                            <span class="icon-tools"></span>
-                            <h3 class="middle-title middle-title_center">Software Development</h3>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                                quae ab illo.</p>
                         </div>
-                        <div class="col-sm-4 icon-style icon-style-1">
-                            <span class="icon-gears"></span>
-                            <h3 class="middle-title middle-title_center">Seo Services</h3>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                                quae ab illo.</p>
+                    <div class="row">
+                        <div class="col-sm-12 col-md-4">
+                            <div class="special-banner">
+                                <img src="/static/img/s-banner-1.jpg" alt="">
+                                <div class="s-banner-box">
+                                    <div class="s-banner-info">
+                                        <span class="icon-tools"></span>
+                                        <h3>Software Development</h3>
+                                        <div class="s-banner-text">
+                                            Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantium
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="s-banner-more">
+                                    <div class="s-banner-more-center">
+                                        <a href="#"> <i class="fa fa-bars"></i></a>
+                                        <p>Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
+                                        <a class="button button-type-2-md btn-white" href="#">more</a><br>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-sm-4 icon-style icon-style-1">
-                            <span class="icon-pencil"></span>
-                            <h3 class="middle-title middle-title_center">Support & Maintenance</h3>
-                            <p>Perspiciatis unde omnis iste natus doxes sit voluptatem accusantium doloremque la dantiumeaque ipsa
-                                quae ab illo.</p>
+                        <div class="col-sm-12 col-md-4">
+                            <div class="special-banner">
+                                <img src="/static/img/s-banner-2.jpg" alt="">
+                                <div class="s-banner-box">
+                                    <div class="s-banner-info">
+                                        <span class="icon-gears"></span>
+                                        <h3>SEO Services</h3>
+                                        <div class="s-banner-text">
+                                            Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantium
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="s-banner-more">
+                                    <div class="s-banner-more-center">
+                                        <a href="#"> <i class="fa fa-bars"></i></a>
+                                        <p>Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
+                                        <a class="button button-type-2-md btn-white" href="#">more</a><br>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <div class="special-banner">
+                                <img src="/static/img/s-banner-3.jpg" alt="">
+                                <div class="s-banner-box">
+                                    <div class="s-banner-info">
+                                        <span class="icon-telescope"></span>
+                                        <h3>Print Media</h3>
+                                        <div class="s-banner-text">
+                                            Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantium
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="s-banner-more">
+                                    <div class="s-banner-more-center">
+                                        <a href="#"> <i class="fa fa-bars"></i></a>
+                                        <p>Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
+                                        <a class="button button-type-2-md btn-white" href="#">more</a><br>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                    <div class="row">
+                        <div class="col-sm-12 col-md-4">
+                            <div class="special-banner">
+                                <img src="/static/img/s-banner-3.jpg" alt="">
+                                <div class="s-banner-box">
+                                    <div class="s-banner-info">
+                                        <span class="icon-telescope"></span>
+                                        <h3>Support &amp; Maintanance</h3>
+                                        <div class="s-banner-text">
+                                            Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantium
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="s-banner-more">
+                                    <div class="s-banner-more-center">
+                                        <a href="#"> <i class="fa fa-bars"></i></a>
+                                        <p>Omnis iste natus doxes sit voluptatem accusa
+                                            ntium doloremque la dantiume aque ipsa quae ab illo veritatis et quasi architecto beatae vitae dicta unt explicabo emo enim ipsam</p>
+                                        <a class="button button-type-2-md btn-white" href="#">more</a><br>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </section>
-
 
     </main>
 {% endblock %}
